Add more information

--- a/index.html
+++ b/index.html
@@ -21,11 +21,94 @@
         <li>Install county computers; install county computer software, hardware, and network adapters; installs workstations and configures address settings; installs standalone printers and printer software; configures for use as a system or session printer; installs network software and configures Ethernet adapters; installs/configures network printers.</li>
     </ul>
     <br>
-    Freelancing, April 2022-present
+    Transitioning, April 2022-present
     <br>
     <ul>
+        <li>Care-Giver</li>
+        <li>Self learning</li>
+        <li></li>
+    </ul>
+    <br>
+    <a href="#">Prime Therapeutics</a>
+    <br> Member Services Specialist, August 2021-April 2022
+    <br>
+    <ul>
+        <li>Handled incoming inquiries about pharmacy insurance for customers and clients</li>
+        <li>Report and logged claims cases for customers and clients</li>
+        <li>Solved complex problems by analyzing data, identifying root causes, and implementing effective solutions.</li>
+        <li>Managed customer relationships by providing exceptional service and addressing inquiries or concerns in a timely manner.</li>
+        <li>Verified insurance coverage and benefits for patients, ensuring accurate billing and payment processing</li>
+    </ul>
+    <br>
+    <a href="#">Transcom</a>
+    <br>iOS Technical Support Analyst, August 2018-June 2021
+    <br>
+    <ul>
+        <li>Support customers needs and provide solutions</li>
+        <li>Provide personal training to customers for their devices</li>
+        <li>Report and log cases in software</li>
+        <li>Use remote access program to assist in resolution and troubleshooting</li>
+        <li></li>
+    </ul>
+    <br>
+    <a href="#">USA800, INC</a>
+    <br>Command Center Analyst, September 2017-June 2018
+    <br>
+    <ul>
+        <li>Monitored account queues, operations and work flow of a team of 25+ agents</li>
+        <li>Use IEX/WFM to present center management with options and recommendations for staffing changes</li>
+        <li>Coordinate and integrate future planned events into schedule</li>
+        <li>Manage and ensure accuracy of real-time and day-of exceptions using WFM software</li>
         <li></li>
         <li></li>
+    </ul>
+    <br>
+    <a href="#">Comcast</a>
+    <br>Work Order Manager, July 2015-August 2016
+    <br>
+    <ul>
+        <li>Liaison between Customer Care and Field Technicians</li>
+        <li>Increase revenue by correcting work orders that affects bottom line</li>
+        <li>Handle highly escalated customer interactions</li>
+        <li>Team Lead for special projects</li>
+        <li>Train New Hires</li>
+    </ul>
+    <br>
+    <a href="#">Henry Schein Inc.</a>
+    <br>Software(Dentrix) Support Technician, August 2014-June 2015
+    <br>
+    <ul>
+        <li>Provide phone and chat support for Dentrix software while providing excellent customer service</li>
+        <li>Use remote access program to assist in resolution and troubleshooting</li>
+        <li>Assisted customers with backup, restore and transfer of their SQL database files</li>
+        <li>Report and log issues with software</li>
+        <li></li>
+    </ul>
+    <br>
+    <a href="#">Bank of America</a>
+    <br>Fraud Analyst II, April 2012-July 2015
+    <br>
+    <ul>
+        <li>Reviews potential fraudulent accounts for the prevention and detection of possible Transaction Fraud and Identity Fraud</li>
+        <li>Analysis account activity to assess levels of risk and fraud type</li>
+        <li>Takes appropriate action based on transaction characteristics and account changes with indicators of complex issues related to possible Identity Theft</li>
+        <li>Takes appropriate corrective action through customer phone contact to verify legitimate usage</li>
+        <li>Ability to de-escalate difficult client situations</li>
+    </ul>
+    <br>
+    <a href="#">United States Air Force</a>
+    <br>Knowledge Operation Manager, November 2005-Spetember 2009
+    <br>
+    <ul>
+        <li>Operate as the Client Support Administrator (CSA) and Network Administrator for over 140 computers</li>
+        <li>Responsible for the installation and management of Portal Flight Planning Software (PFPS) on 44 Secret and Top Secret classified network computers</li>
+        <li>Operator of all government necessary networks installs and repairs to computer operating systems and software, allowing over 150 computers to stay accessible on organization network.</li>
+        <li>Utilized Trouble Management System Remedy to track, document, analyze work orders and resolves customer trouble tickets </li>
+        <li>Responsible for organizing, updating, and developing internal policies and programs to manage 1,500 computers/nodes valued at $1M</li>
+        <li>Assisted in tech refresh; transferred $3K of outdated hardware--completed upgrade of 200+ items including workstations, servers, printers & networking capabilities</li>
+        <li>Managed SQL files on server and made sure that SQL files were backed up every night properly</li>
+        <li>Troubleshoot printer connectivity issues, such as installing network cards and reinstalling drivers; also troubleshoot computer connectivity, to include installing network cards and checking local area network (LAN) cable connectivity</li>
+        <li>Reset user passwords and created user accounts using Active Directory</li>
         <li></li>
     </ul>
     <h2>Education</h2>
@@ -33,10 +116,30 @@
     <br>
     Software Engineering, October 2024-February 2025
     <br>
+    <br>
     <a href="#">100Devs</a>
     <br>
     Software Engineering, December 2023-Present
-    <!--  -->
+    <br>
+    <br>
+    <a href="#">ACI Learning</a>
+    <br>
+    Network Support Specialist, October 2023-December 2023
+    <br>
+    <br>
+    <a href="#">Southern New Hampshire University</a>
+    <br>
+    Bachelor of Science, Computer Information Systems, Software Engineering, October 2021-March 2024
+    <br>
+    <br>
+    <a href="#">Community College of the Air Force</a>
+    <br>
+    Associate, Computer Information Systems, November 2005-September 2009
+    <br>
+    <br>
+    Hirschi Math/Science International Baccalaureate Magnet High School
+    <br>
+    Diploma, August 2001-May 2005 
     <h2>Websites</h2>
         <ul>
             <li><a href="#">LinkedIn</a></li>
