Updated wording of resume

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Document</title>
+    <title>TeMecha's Resume</title>
 </head>
 <body>
     <h1>TeMecha Griffin</h1>
@@ -11,105 +11,105 @@
     <br>
     Software Engineer
     <br>
+    <br>
+    <p>Motivated and detail-oriented Software Developer with a strong foundation in front-end web development and experience in technical support. Proven ability to quickly learn and adapt to new technologies and software development tools. Eager to contribute as a vital member of a software engineering team.</p>
     <h2>Experience</h2>
     <a href="#">Clayton County Board of Commissioners Department of Information Technology</a>
     <br>
     Service Desk Technician, March 2024 - October 2024
     <ul>
-        <li>Diagnoses problems related to county computers, terminals, thin clients, printers, and other peripherals; troubleshoots connectivity problems to the ethernet switched network.</li>
-        <li>Installs, repairs, and maintains telecommunications systems and computer network cabling and termination, multimedia cabling and termination, and various electronic devices associated with telecommunications systems</li>
-        <li>Install county computers; install county computer software, hardware, and network adapters; installs workstations and configures address settings; installs standalone printers and printer software; configures for use as a system or session printer; installs network software and configures Ethernet adapters; installs/configures network printers.</li>
+        <li>Diagnosed and resolved hardware and connectivity issues for county computers, terminals, thin clients, printers, and other peripherals, ensuring minimal downtime.</li>
+        <li>Installed, repaired, and maintained telecommunications systems, network cabling, and multimedia systems, supporting seamless communication across county departments.</li>
+        <li>Deployed and configured county computers, software, hardware, and peripherals, including workstations, network printers, and Ethernet adapters, ensuring proper system integration and functionality.</li>
     </ul>
     <br>
-    Transitioning, April 2022-present
+    Career Transition, Software Engineer, April 2022-present
     <br>
     <ul>
-        <li>Care-Giver</li>
-        <li>Self learning</li>
-        <li></li>
+        <li>Actively pursuing a career shift into software development, with a focus on acquiring technical skills and hands-on experience in programming.</li>
+        <li>Completed training and coursework in [mention specific programming languages, tools, or frameworks you’ve focused on], and working on [describe any personal projects, coding challenges, or contributions to open-source].</li>
+        <li>Developing a strong foundation in [mention any specific areas of interest like web development, mobile apps, back-end development, etc.], and continuously expanding technical knowledge through self-directed learning and online resources.</li>
     </ul>
     <br>
     <a href="#">Prime Therapeutics</a>
     <br> Member Services Specialist, August 2021-April 2022
     <br>
     <ul>
-        <li>Handled incoming inquiries about pharmacy insurance for customers and clients</li>
-        <li>Report and logged claims cases for customers and clients</li>
-        <li>Solved complex problems by analyzing data, identifying root causes, and implementing effective solutions.</li>
-        <li>Managed customer relationships by providing exceptional service and addressing inquiries or concerns in a timely manner.</li>
-        <li>Verified insurance coverage and benefits for patients, ensuring accurate billing and payment processing</li>
+        <li>Handled customer and client inquiries related to pharmacy insurance, delivering high-quality support and achieving first-call resolution.</li>
+        <li>Logged and tracked claims cases, ensuring accurate documentation and timely follow-up.</li>
+        <li>Managed customer relationships by providing exceptional service, addressing concerns, and resolving issues in a prompt and professional manner.</li>
+        <li>Analyzed complex issues, identified root causes, and implemented effective solutions to improve service delivery.</li>
+        <li>Verified insurance coverage and benefits for patients, ensuring correct billing and payment processes were followed.</li>
     </ul>
     <br>
     <a href="#">Transcom</a>
     <br>iOS Technical Support Analyst, August 2018-June 2021
     <br>
     <ul>
-        <li>Support customers needs and provide solutions</li>
-        <li>Provide personal training to customers for their devices</li>
-        <li>Report and log cases in software</li>
-        <li>Use remote access program to assist in resolution and troubleshooting</li>
-        <li></li>
+        <li>Delivered exceptional technical support to iOS users, resolving hardware and software issues and ensuring customer satisfaction.</li>
+        <li>Conducted personalized training sessions for customers, enhancing their understanding and use of iOS devices and applications.</li>
+        <li>Documented and tracked customer cases using CRM software, ensuring accurate records and timely resolution.</li>
+        <li>Utilized remote access tools to troubleshoot and resolve device issues efficiently, reducing customer downtime.</li>
     </ul>
     <br>
     <a href="#">USA800, INC</a>
     <br>Command Center Analyst, September 2017-June 2018
     <br>
     <ul>
-        <li>Monitored account queues, operations and work flow of a team of 25+ agents</li>
-        <li>Use IEX/WFM to present center management with options and recommendations for staffing changes</li>
-        <li>Coordinate and integrate future planned events into schedule</li>
-        <li>Manage and ensure accuracy of real-time and day-of exceptions using WFM software</li>
-        <li></li>
-        <li></li>
+        <li>Monitored account queues and workflow for a team of 25+ agents, ensuring smooth operations and timely task completion.</li>
+        <li>Utilized IEX/WFM tools to provide management with staffing recommendations and real-time adjustments to optimize resource allocation.</li>
+        <li>Coordinated planned events and integrated them into team schedules, ensuring minimal disruption to workflow.</li>
+        <li>Managed real-time and day-of exceptions using WFM software, ensuring staffing accuracy and operational efficiency.</li>
+        <li>As an agent, provided phone support for card services inquiries, achieving first-call resolution and maintaining high customer satisfaction.</li>
     </ul>
     <br>
     <a href="#">Comcast</a>
     <br>Work Order Manager, July 2015-August 2016
     <br>
     <ul>
-        <li>Liaison between Customer Care and Field Technicians</li>
-        <li>Increase revenue by correcting work orders that affects bottom line</li>
-        <li>Handle highly escalated customer interactions</li>
-        <li>Team Lead for special projects</li>
-        <li>Train New Hires</li>
+        <li>Acted as a liaison between Customer Care and Field Technicians, facilitating smooth communication and resolution of work order issues.</li>
+        <li>Increased revenue by identifying and correcting work orders that impacted the bottom line, improving operational efficiency.</li>
+        <li>Handled escalated customer interactions, providing solutions to complex issues and ensuring customer satisfaction.</li>
+        <li>Led special projects as Team Lead, driving initiatives to improve team performance and operational processes.</li>
+        <li>Trained new hires, ensuring they were well-equipped to manage work orders and customer concerns.</li>
+        <li>Managed the Team Spirit Committee, fostering a positive and motivated work environment.</li>
     </ul>
     <br>
     <a href="#">Henry Schein Inc.</a>
     <br>Software(Dentrix) Support Technician, August 2014-June 2015
     <br>
     <ul>
-        <li>Provide phone and chat support for Dentrix software while providing excellent customer service</li>
-        <li>Use remote access program to assist in resolution and troubleshooting</li>
-        <li>Assisted customers with backup, restore and transfer of their SQL database files</li>
-        <li>Report and log issues with software</li>
-        <li></li>
+        <li>Delivered phone and chat support for Dentrix software, ensuring first-call resolution and exceptional customer service.</li>
+        <li>Used remote access tools to troubleshoot and resolve technical issues efficiently, minimizing client downtime.</li>
+        <li>Assisted customers with SQL database backups, restores, and transfers, ensuring data integrity and smooth transitions.</li>
+        <li>Documented and tracked software issues, escalating complex cases as necessary to maintain effective support workflows.</li>
     </ul>
     <br>
     <a href="#">Bank of America</a>
     <br>Fraud Analyst II, April 2012-July 2015
     <br>
     <ul>
-        <li>Reviews potential fraudulent accounts for the prevention and detection of possible Transaction Fraud and Identity Fraud</li>
-        <li>Analysis account activity to assess levels of risk and fraud type</li>
-        <li>Takes appropriate action based on transaction characteristics and account changes with indicators of complex issues related to possible Identity Theft</li>
-        <li>Takes appropriate corrective action through customer phone contact to verify legitimate usage</li>
-        <li>Ability to de-escalate difficult client situations</li>
+        <li>Reviewed accounts to detect and prevent potential transaction and identity fraud, mitigating financial risk.</li>
+        <li>Analyzed account activity to assess risk levels and identify fraud types, taking proactive steps to safeguard client assets.</li>
+        <li>Initiated corrective actions through customer phone contact to verify legitimate transactions, ensuring account security.</li>
+        <li>TDe-escalated complex customer situations, providing reassurance and clarity in high-stress scenarios</li>
     </ul>
     <br>
     <a href="#">United States Air Force</a>
     <br>Knowledge Operation Manager, November 2005-Spetember 2009
     <br>
     <ul>
-        <li>Operate as the Client Support Administrator (CSA) and Network Administrator for over 140 computers</li>
-        <li>Responsible for the installation and management of Portal Flight Planning Software (PFPS) on 44 Secret and Top Secret classified network computers</li>
-        <li>Operator of all government necessary networks installs and repairs to computer operating systems and software, allowing over 150 computers to stay accessible on organization network.</li>
-        <li>Utilized Trouble Management System Remedy to track, document, analyze work orders and resolves customer trouble tickets </li>
-        <li>Responsible for organizing, updating, and developing internal policies and programs to manage 1,500 computers/nodes valued at $1M</li>
-        <li>Assisted in tech refresh; transferred $3K of outdated hardware--completed upgrade of 200+ items including workstations, servers, printers & networking capabilities</li>
-        <li>Managed SQL files on server and made sure that SQL files were backed up every night properly</li>
-        <li>Troubleshoot printer connectivity issues, such as installing network cards and reinstalling drivers; also troubleshoot computer connectivity, to include installing network cards and checking local area network (LAN) cable connectivity</li>
-        <li>Reset user passwords and created user accounts using Active Directory</li>
-        <li></li>
+        <li>Served as the Client Support Administrator (CSA) and Network Administrator for over 140 computers, ensuring optimal performance and security.</li>
+        <li>Installed and managed Portal Flight Planning Software (PFPS) on 44 Secret and Top Secret classified network computers, maintaining compliance with security protocols.</li>
+        <li>Operated and repaired all necessary government networks, ensuring continuous access for over 150 computers on the organizational network.</li>
+        <li>Provided exceptional customer support to 30+ instructors and staff members, addressing personnel and technical issues efficiently.</li>
+        <li>Utilized Trouble Management System (Remedy) to track, document, and resolve customer trouble tickets, improving service response times.</li>
+        <li>Managed user accounts and password resets using Active Directory, maintaining security and accessibility for all users.</li>
+        <li>Organized, updated, and developed internal policies and programs to oversee 1,500 computers/nodes valued at $1M, enhancing operational efficiency.</li>
+        <li>Troubleshot printer connectivity and computer issues, including network card installations and LAN cable checks, ensuring seamless operations.</li>
+        <li>Assisted in tech refresh initiatives, successfully upgrading over 200 items, including workstations, servers, printers, and networking capabilities.</li>
+        <li>Managed SQL server files, ensuring nightly backups to maintain data integrity and availability.
+        </li>
     </ul>
     <h2>Education</h2>
     <a href="#">Per Scholas</a>
